# embedmicropython

./: .gitignore  CMakeLists.txt  Makefile  README.md  REAL_MICROPYTHON_INTEGRATION.md  micropython_cpp_integration_plan.md
examples/: basic_example.cpp  file_example.cpp  script_execution_example.cpp  test_script.py
include/: micropython_engine.h
micropython_config/: help_text.c  mpconfigport.h
output/: .gitkeep
scripts/: setup_dependencies.sh
src/: micropython_embed_stub.h  micropython_engine.cpp  micropython_stubs.c
